# Miya

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  .pylintrc  CACHE_CODE_REVIEW_REPORT.md  CACHE_MIGRATION_GUIDE.md  CACHE_SYSTEM_TRAINING_GUIDE.md  CACHE_SYSTEM_UPGRADE_SUMMARY.md  CLAUDE.md  Dockerfile  FIX_SUMMARY.md  MEMORY_MIGRATION_GUIDE.md  P1_MIGRATION_PLAN.md  P1_P2_COMPLETION_SUMMARY.md  P2_EXECUTION_GUIDE.md  P2_PERFORMANCE_VALIDATION_PLAN.md  P2_QUICK_START.md  PERFORMANCE_AND_SECURITY_UPGRADE.md  PROJECT_OPTIMIZATION_SUMMARY.py  QQ_CACHE_OPTIMIZATION_REPORT.md  QUICK_REFERENCE.md  QUICK_START_ULTIMATE_MIYA.md  QUICK_START_V2.0.1.md  README.md  README_full_temp.md  REFACTORING_SUMMARY.md  TODO.md  VERSION_V2.0.1.md  VERSION_V2.0.2.md  avatar_config.yaml  build_web.sh  build_web_fixed.bat  cache_performance_partial_report.json  cache_performance_report.json  canary_deployment_manager.py  canary_state.json  cleanup_old_cache.py  conversation_history.txt  deploy_public.sh  (+32 more)
.claude/: settings.json
.codebuddy/: completed_tasks_summary.md
collaboration/: group_chat.py
config/: .env.example  __init__.py  advanced_config.json.example  agent_routing_config.json  api_endpoints.json  default_qq_command_config.json  emoji_config.yaml  grag_config.py  mcp.json  mcp.yaml  memory_config.json  miya_ultimate_config.json  multi_model_config.example.json  multi_model_config.json  multi_model_config.json.example  ocr_backup_config.yaml  performance_config.py  permissions.json  permissions.yaml  personality_config.json  proactive_chat.yaml  qq_config.yaml  (+16 more)
(+1647 files in other folders)
